fix: remove unused endpoints
